--- a/exchange-cli/Jenkinsfile
+++ b/exchange-cli/Jenkinsfile
@@ -40,6 +40,20 @@ pipeline {
 
                     }
 
+                    stage ('Unit Tests') {
+
+                            steps {
+
+                                      dir ('exchange-cli') {
+
+                                                  sh "npm run test:unit"
+
+                                      }
+
+                            }
+
+                    }
+
         }
 
 }
